fix images api bug
build from iso
